--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,6 +24,7 @@
   <nav class="main" id="n1" role="navigation">
     <span><a href="/">Inicio</a></span>
     <span><a href="/quizes/question">Preguntas</a></span>
+    <span><a href="/author">Créditos</a></span>
   </nav>
 
   <section class="main" id="s1">
@@ -34,7 +35,7 @@
   </section>
   <p></p>
   <footer class="main" id="f1">
-    <a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a>
+    <a href="https://github.com/JoseLuisTo/quiz">Repositorio GitHub</a>
   </footer>
 </div>
 </body> 
