--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,5 +1,13 @@
-  <table>
-  <% var i; for (i=0; i < quizes.length; i++) { %>        
-     <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr> 
-  <% } %>
-  </table>
+  ﻿<form method="get" action="/quizes">
+	<p>Buscador de preguntas:
+	<input type="text" name="search" value="" placeholder="Cadena de búsqueda">
+	<input type="submit" value="Buscar"></p>
+</form>
+
+<table>
+	<% var i; for (i=0; i < quizes.length; i++) { %>
+		<tr><td>
+		<a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a>
+		</td></tr>
+		<% } %>
+	</table>
