--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,12 +28,18 @@
   </nav>
 
   <section class="main" id="s1">
-    <p></p>
-    <div>
-      <%- body %>
-    </div>
+    <% if (errors.length) { %>
+      <span id='ErrorMsgs'>
+        Corregir errores:<br/>
+        <% for (var i in errors) { %>
+           <span> <%= errors[i].message %> </span><br/>
+        <% } %>
+      </span>
+    <% } %>
+
+    <div><%- body %></div>
   </section>
-  <p></p>
+  
   <footer class="main" id="f1">
     <a href="https://github.com/JoseLuisTo/quiz">Repositorio GitHub</a>
   </footer>
