--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,5 +1,6 @@
 <form method="get" action="/quizes/<%= quiz.id %>/answer">        
-  Pregunta: <%= quiz.pregunta %> <p>
-  <input type="text" name="respuesta" value="Respuesta"/>
-  <input type="submit" value="Enviar">
+	  <p>Pregunta: <%= quiz.pregunta %> </p>
+	  <p>Temática: <%= quiz.tematica %> </p>
+	  <input type="text" name="respuesta" value="Respuesta"/>
+	  <input type="submit" value="Enviar">
 </form>
